--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "todoapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "create-react-app": "^5.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
-  }
+    "name": "todoapp",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "keywords": [],
+    "author": "Hemsai",
+    "license": "ISC",
+    "dependencies": {
+        "create-react-app": "^5.0.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongodb": "^6.5.0",
+        "mongoose": "^8.3.2",
+        "nodemon": "^3.1.0"
+    }
 }
